fixing text alignment

--- a/_sass/uno.scss
+++ b/_sass/uno.scss
@@ -1168,7 +1168,7 @@ hr {
 	max-width: 100%;
 	margin: 0 auto;
 	border-radius: 3px;
-	text-align: center; }
+	text-align: left; }
 
 img {
 	max-width: 80%;
